Added files for implementation and testing of procstat library.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,8 @@ project(cpu-usage-tracker VERSION 0.1.0)
 
 add_library(procstat SHARED proc_stat/proc_stat.c)
 
-# add_executable(procstat-test proc_stat/proc_stat_test.c proc_stat/proc_stat.c)
+add_executable(procstat-test proc_stat/proc_stat_test.c)
+target_link_libraries(procstat-test procstat)
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
