Added analyzer library.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,12 @@ target_include_directories(ringbuffer PUBLIC ./)
 add_executable(ringbuffer-test ring_buffer/ring_buffer_test.c)
 target_link_libraries(ringbuffer-test ringbuffer)
 
+add_library(analyzer SHARED analyzer/analyzer.c)
+target_include_directories(analyzer PUBLIC ./)
+
+add_executable(analyzer-test analyzer/analyzer_test.c)
+target_link_libraries(analyzer-test analyzer)
+
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
 include(CPack)
