Added sketch of main program.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,9 @@ target_include_directories(analyzer PUBLIC ./)
 add_executable(analyzer-test analyzer/analyzer_test.c)
 target_link_libraries(analyzer-test analyzer)
 
+add_executable(cut main.c)
+target_link_libraries(cut analyzer ringbuffer reader pthread)
+
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
 include(CPack)
