--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,26 +3,26 @@ project(cpu-usage-tracker VERSION 0.1.0)
 
 add_compile_options(-Wall -Wextra -Wpedantic)
 
-add_library(reader SHARED reader/reader.c)
-target_include_directories(reader PUBLIC ./)
+add_library(reader SHARED src/reader/reader.c)
+target_include_directories(reader PUBLIC src/)
 
-add_executable(reader-test reader/reader_test.c)
+add_executable(reader-test src/reader/reader_test.c)
 target_link_libraries(reader-test reader ringbuffer)
-target_include_directories(reader-test PUBLIC ./)
+target_include_directories(reader-test PUBLIC src/)
 
-add_library(ringbuffer SHARED ring_buffer/ring_buffer.c)
-target_include_directories(ringbuffer PUBLIC ./)
+add_library(ringbuffer SHARED src/ring_buffer/ring_buffer.c)
+target_include_directories(ringbuffer PUBLIC src/)
 
-add_executable(ringbuffer-test ring_buffer/ring_buffer_test.c)
+add_executable(ringbuffer-test src/ring_buffer/ring_buffer_test.c)
 target_link_libraries(ringbuffer-test ringbuffer)
 
-add_library(analyzer SHARED analyzer/analyzer.c)
-target_include_directories(analyzer PUBLIC ./)
+add_library(analyzer SHARED src/analyzer/analyzer.c)
+target_include_directories(analyzer PUBLIC src/)
 
-add_executable(analyzer-test analyzer/analyzer_test.c)
+add_executable(analyzer-test src/analyzer/analyzer_test.c)
 target_link_libraries(analyzer-test analyzer)
 
-add_executable(cut cut.c)
+add_executable(cut src/cut.c)
 target_link_libraries(cut analyzer ringbuffer reader pthread)
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
