--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,8 +23,14 @@ target_include_directories(analyzer PUBLIC src/)
 add_executable(analyzer-test src/analyzer/analyzer_test.c)
 target_link_libraries(analyzer-test analyzer)
 
+add_library(logger SHARED src/logger/logger.c)
+target_include_directories(logger PUBLIC src/)
+
+add_executable(logger-test src/logger/logger_test.c)
+target_link_libraries(logger-test logger)
+
 add_executable(cut src/cut.c)
-target_link_libraries(cut analyzer ringbuffer reader pthread)
+target_link_libraries(cut analyzer ringbuffer reader logger pthread)
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
